# Dream-Gobang

./: .gitignore  README.md  avmingw.sh  build-mingw32.bat  build-vs.bat
src/: BaseButton.h  Button.cpp  Button.h  CMakeLists.txt  Chess.cpp  Chess.h  ChessBoardView.cpp  ChessBoardView.h  ChessSaver.cpp  ChessSaver.h  ComputerPlayer.cpp  ComputerPlayer.h  Dialog.cpp  Dialog.h  Dream-Gobang-MinGW.rc  EditText.h  GameMain.cpp  Gobang.cpp  Gobang.h  Image.cpp  Image.h  ImageButton.h  Interface.cpp  Interface.h  MessageDialog.cpp  MessageDialog.h  Music.cpp  Music.h  NetPlayerInfoView.cpp  NetPlayerInfoView.h  NetPlayingInterface.cpp  NetPlayingInterface.h  NetSelectionInterface.cpp  NetSelectionInterface.h  NetSettingsInterface.cpp  NetSettingsInterface.h  NetWaitingInterface.cpp  NetWaitingInterface.h  PlayChess.cpp  PlayChess.h  (+12 more)
src/ege_lib_src/: ege.h  ege_head.h  egegapi.cpp  graphics.cpp  image.cpp
src/include/: ege.h  graphics.h
src/res/: BinaryConvert.c  CMakeLists.txt  Dream-Gobang-vs.rc  Dream-Gobang.rc  Simple-Gobang-vs.rc  Simple-Gobang.rc  cursor.ani  game-bgm.wma  resource.h
src/res/dialog/: CMakeLists.txt  README.md
src/socket/: ClientPlayer.cpp  ClientPlayer.h  ClientSocket.cpp  ClientSocket.h  ServerPlayer.cpp  ServerPlayer.h  ServerSocket.cpp  ServerSocket.h
src/tools/: GradientAnimation.cpp  GradientAnimation.h  Image.cpp  Image.h  IniSimpleParser.cpp  IniSimpleParser.h  Music.cpp  ThreadQueue.h
src/widgets/: Button.cpp  Button.h  Dialog.cpp  Dialog.h  EditDialog.cpp  EditDialog.h  EditText.cpp  EditText.h  ImageButton.cpp  ImageButton.h  ImageTextButton.cpp  ImageTextButton.h  MessageDialog.cpp  MessageDialog.h  QuestionDialog.cpp  QuestionDialog.h
