cmake_minimum_required (VERSION 2.6)
file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/res")

file(GLOB PICTURES *.jpg)
file(GLOB TEMPPICTURES . *.png)
list(APPEND PICTURES ${TEMPPICTURES})
foreach(PICTURE ${PICTURES})
    get_filename_component(PICNAME ${PICTURE} NAME)
    string(REPLACE ".jpg" "" HEADERNAME ${PICNAME})
	string(REPLACE ".png" "" HEADERNAME ${HEADERNAME})
    string(MAKE_C_IDENTIFIER ${HEADERNAME} ICONNAME)
	set(ICONNAME image_${ICONNAME})
    message(STATUS "Generating iamge header ${ICONNAME}.h for ${PICTURE}")
    execute_process(COMMAND "${PROJECT_SOURCE_DIR}/res/BinaryConvert" "${PICTURE}" "${CMAKE_BINARY_DIR}/res/${ICONNAME}.h")
endforeach()
add_subdirectory(dialog)
